# newosp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  README_zh.md  bench_subscribe
.ai/: .clang-tidy  README.md  check.sh  format.sh  lint.sh  llms-full.txt  llms.txt  server.py  tidy.sh
.github/workflows/: ci.yml
defs/: protocol_messages.yaml  sensor_messages.yaml  topology.yaml
docs/: benchmark_report_zh.md  changelog_zh.md  coding_standards_zh.md  cserialport_integration_analysis.md  design_async_log_zh.md  design_codegen_zh.md  design_data_dispatcher_zh.md  design_job_pool_zh.md  design_shell_commands_zh.md  design_shell_optimization_zh.md  design_timer_unification_zh.md  design_zh.md  examples_zh.md  inicpp_api_zh.md  osp_legacy_analysis.md  performance_analysis_lidar_zh.md  reference_zh.md  shell_commands_zh.md
docs/api/: README.md  api_data_flow_zh.md  api_foundation_core_zh.md  api_network_transport_zh.md  api_service_app_zh.md  api_state_scheduler_zh.md
docs/wiki/: API-Foundation-Core.md  API-Network-Transport.md  API-Service-App.md  API-State-Scheduler.md  Architecture.md  Examples.md  Home.md  Performance.md  Quick-Start.md  _Sidebar.md
examples/: CMakeLists.txt  README.md  README_serial_demo.md  basic_demo.cpp  benchmark.cpp  bt_patrol_demo.cpp  client_demo.cpp  codegen_demo.cpp  hsm_bt_combo_demo.cpp  hsm_protocol_demo.cpp  inicpp_demo.cpp  node_manager_hsm_demo.cpp  priority_demo.cpp  protocol_demo.cpp  realtime_executor_demo.cpp  serial_demo.cpp  worker_pool_demo.cpp
examples/benchmarks/: README.md  bus_payload_benchmark.cpp  serial_benchmark.cpp  transport_benchmark.cpp  unix_socket_benchmark.cpp
examples/client_gateway/: README.md  handlers.hpp  main.cpp  messages.hpp
examples/data_dispatcher/: CMakeLists.txt  README.md  common.hpp  consumer_fusion.cpp  consumer_logging.cpp  launcher.cpp  monitor.cpp  pipeline_demo.cpp  producer.cpp  unified_api_demo.cpp
examples/data_visitor_dispatcher/: CMakeLists.txt  README.md  common.hpp  launcher.cpp  monitor.cpp  pipeline_demo.cpp  producer.cpp  visitor_fusion.cpp  visitor_logging.cpp
examples/inicpp/: CMakeLists.txt  custom_type_conversion.cpp  decode_ini_file.cpp  encode_ini_file.cpp  inicpp_demo.cpp  load_ini_file.cpp  save_ini_file.cpp  test.ini
examples/net_stress/: CMakeLists.txt  README.md  client.cpp  client_sm.hpp  file_transfer.hpp  launcher.cpp  monitor.cpp  net_stress.ini  protocol.hpp  server.cpp
examples/serial_ota/: README.md  device.hpp  host.hpp  main.cpp  parser.hpp  protocol.hpp
examples/shm_ipc/: CMakeLists.txt  README.md  shm_common.hpp  shm_consumer.cpp  shm_monitor.cpp  shm_producer.cpp
examples/streaming_protocol/: README.md  handlers.hpp  main.cpp  messages.hpp
examples/system_monitor/: CMakeLists.txt  README.md  main.cpp  system_monitor.yaml
extras/mcp-docs/: README.md  README_llms.md  llms-full.txt  llms.txt  server.py
include/osp/: app.hpp  async_log.hpp  bt.hpp  bus.hpp  config.hpp  connection.hpp  data_dispatcher.hpp  data_fusion.hpp  discovery.hpp  discovery_hsm.hpp  executor.hpp  fault_collector.hpp  hsm.hpp  inicpp.h  inicpp.hpp  io_poller.hpp  job_pool.hpp  lifecycle_node.hpp  log.hpp  mem_pool.hpp  net.hpp  node.hpp  node_manager.hpp  node_manager_hsm.hpp  platform.hpp  post.hpp  process.hpp  qos.hpp  semaphore.hpp  serial_transport.hpp  service.hpp  service_hsm.hpp  shell.hpp  shell_commands.hpp  shm_transport.hpp  shutdown.hpp  socket.hpp  spsc_ringbuffer.hpp  static_node.hpp  system_monitor.hpp  (+6 more)
tests/: CMakeLists.txt  README.md  test_app.cpp  test_async_log.cpp  test_bt.cpp  test_bus.cpp  test_config.cpp  test_connection.cpp  test_data_dispatcher.cpp  test_data_fusion.cpp  test_discovery.cpp  test_discovery_hsm.cpp  test_executor.cpp  test_fault_collector.cpp  test_hsm.cpp  test_inicpp.cpp  test_integration.cpp  test_io_poller.cpp  test_job_pool.cpp  test_lifecycle_node.cpp  test_log.cpp  test_mem_pool.cpp  test_net.cpp  test_node.cpp  test_node_manager.cpp  test_node_manager_hsm.cpp  test_platform.cpp  test_post.cpp  test_process.cpp  test_qos.cpp  test_semaphore.cpp  test_serial_transport.cpp  test_service.cpp  test_service_hsm.cpp  test_shell.cpp  test_shell_args.cpp  test_shell_backend.cpp  test_shell_commands.cpp  test_shm_transport.cpp  test_shutdown.cpp  (+11 more)
tests/inicpp/: test_convert.cpp  test_edge_cases.cpp  test_file_io.cpp  test_inifield.cpp  test_inifile.cpp  test_inisection.cpp
tools/: ospgen.py
tools/templates/: messages.hpp.j2  topology.hpp.j2
